--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <div class="container-fluid">
-  <h1>BAD BOYS DEPLOYMENT</h1>
+  <h1>BAD BOYS DEPLOYMENT OF TIC TAC</h1>
 </div>
 
 </body>
